# jni_trace

./: README.md
app/: build.gradle
module/: build.gradle
module/src/main/cpp/: CMakeLists.txt  example.cpp
module/src/main/cpp/third/: CMakeLists.txt
